--- a/240418.md
+++ b/240418.md
@@ -16,7 +16,7 @@ let day = d.getDate();
 let date = `${year}/${month}/${day}`;
 ```
 
-![에러 이미지](img/20240418.png)
+![에러 이미지](img/240418.png)
 
 무엇이 문제일까 한참을 구글링하다가 아주 어처구니 없는 실수를 발견..
 
