--- a/240419.md
+++ b/240419.md
@@ -28,6 +28,6 @@ if (navigator.geolocation) {
 
 그런데 아래와 같이 기온 정보가 나타날 때까지 무려 4초나 걸림..!
 
-![기온 이미지](img/20240419.png)
+![기온 이미지](img/240419.png)
 
 뭐가 문제인지 궁금해서 구글링해봤는데 OpenAPI 호출이 너무 느리다고 하는 사람들이 많다. 그런데 웹개발 종합반 강의 실습으로 미세 먼지 API를 호출했을 때에는 이렇게까지 느리지 않았는데.. 무슨 차이일까?
