change image path

--- a/24년 4월 TIL/240425.md
+++ b/24년 4월 TIL/240425.md
@@ -2,7 +2,7 @@
 
 키보드 enter 키 입력 시 검색 버튼이 자동으로 작동하게 addEventListener를 이용해 처리하던 중 다음과 같은 에러가 발생
 
-![에러 이미지](img/240425.png)
+![에러 이미지](../img/240425.png)
 
 원인은 HTML이 모두 로드되기 전에 자바스크립트 영역에서 HTML을 참조하기 때문이었음
 
