--- a/24년 5월 TIL/240501.md
+++ b/24년 5월 TIL/240501.md
@@ -4,4 +4,4 @@
 
 피그마는 누가 만들어놓은 것만 봤지 내가 만져보는 건 처음이었다. 시간이 부족해서 딱 그 화면만 만들어볼 수 있었다. 짧은 시간 내에 만든 것치고, 처음 만들어본 것치고 나쁘지 않은 듯..? 😇
 
-![피그마 이미지](img/240501.png)
+![피그마 이미지](../img/240501.png)
