--- a/24년 6월 TIL/240606 : 팀 프로젝트 ~ing.md
+++ b/24년 6월 TIL/240606 : 팀 프로젝트 ~ing.md
@@ -25,7 +25,7 @@
 
   - [x] 로그인 체크 후 비로그인 상태일 시 로그인 페이지로 리다이렉션
   - [x] 댓글 내용 유효성 검사 (5자 이상)
-  - [ ] 댓글 등록 시 댓글창 리랜더링
+  - [x] 댓글 등록 시 댓글창 리랜더링
 
 - [ ] 리팩토링
 
@@ -42,8 +42,6 @@
 - [x] 게시글 수정
 
   - [x] 제목, 내용, 이미지 수정 (기존 이미지 미리보기)
-
-- [x] 댓글 등록 시 댓글란 리랜더링 처리
 
 - [ ] 리팩토링
 
