--- a/24년 7월 TIL/240719 : 와이어 프레임 피드백 및 DB 테이블 설계 (최종 프로젝트).md
+++ b/24년 7월 TIL/240719 : 와이어 프레임 피드백 및 DB 테이블 설계 (최종 프로젝트).md
@@ -30,7 +30,7 @@
 
 | 컬럼명        | 내용        | 비고   |
 | ------------- | ----------- | ------ |
-| user_id       | 유저 아이디 | 기본키 |
+| userId        | 유저 아이디 | 기본키 |
 | email         | 이메일      |        |
 | nickname      | 닉네임      |        |
 | created_at    | 생성 일시   |        |
@@ -42,39 +42,40 @@
 
 | 컬럼명     | 내용                      | 비고   |
 | ---------- | ------------------------- | ------ |
-| point_id   | 포인트 아이디             | 기본키 |
+| pointId    | 포인트 아이디             | 기본키 |
 | user_id    | 유저 아이디               | 외래키 |
 | point      | 추가 혹은 감소되는 포인트 |        |
 | created_at | 생성 일시                 |        |
-| provider   | 로그인 방식               |        |
+| reason     | 포인트 획득 출처          |        |
 
 ### knowhow_posts 테이블
 
-| knowhow_post_id | 노하우 게시글 아이디 | 기본키 |
-| --------------- | -------------------- | ------ |
-| user_id         | 유저 아이디          | 외래키 |
-| title           | 제목                 |        |
-| content         | 내용                 |        |
-| image_url       | 이미지               |        |
-| created_at      | 생성 일시            |        |
-| updated_at      | 수정 일시            |        |
+| 컬럼명         | 내용                 | 비고   |
+| -------------- | -------------------- | ------ |
+| knowhow_postId | 노하우 게시글 아이디 | 기본키 |
+| user_id        | 유저 아이디          | 외래키 |
+| title          | 제목                 |        |
+| content        | 내용                 |        |
+| image_url      | 이미지               |        |
+| created_at     | 생성 일시            |        |
+| updated_at     | 수정 일시            |        |
 
 ### knowhow_comments 테이블
 
-| 컬럼명             | 내용                 | 비고   |
-| ------------------ | -------------------- | ------ |
-| knowhow_comment_id | 노하우 댓글 아이디   | 기본키 |
-| knowhow_post_id    | 노하우 게시글 아이디 | 외래키 |
-| user_id            | 유저 아이디          | 외래키 |
-| content            | 내용                 |        |
-| created_at         | 생성 일시            |        |
-| updated_at         | 수정 일시            |        |
+| 컬럼명            | 내용                 | 비고   |
+| ----------------- | -------------------- | ------ |
+| knowhow_commentId | 노하우 댓글 아이디   | 기본키 |
+| knowhow_post_id   | 노하우 게시글 아이디 | 외래키 |
+| user_id           | 유저 아이디          | 외래키 |
+| content           | 내용                 |        |
+| created_at        | 생성 일시            |        |
+| updated_at        | 수정 일시            |        |
 
 ### knowhow_likes 테이블
 
 | 컬럼명          | 내용                 | 비고   |
 | --------------- | -------------------- | ------ |
-| knowhow_like_id | 노하우 좋아요 아이디 | 기본키 |
+| knowhow_likeId  | 노하우 좋아요 아이디 | 기본키 |
 | knowhow_post_id | 노하우 게시글 아이디 | 외래키 |
 | user_id         | 유저 아이디          | 외래키 |
 | created_at      | 생성 일시            |        |
@@ -83,7 +84,7 @@
 
 | 컬럼명        | 내용                    | 비고   |
 | ------------- | ----------------------- | ------ |
-| vote_post_id  | 소비 평가 게시글 아이디 | 기본키 |
+| vote_postId   | 소비 평가 게시글 아이디 | 기본키 |
 | user_id       | 유저 아이디             | 외래키 |
 | title         | 제목                    |        |
 | content       | 내용                    |        |
@@ -95,30 +96,30 @@
 
 ### vote_comments 테이블
 
-| 컬럼명          | 내용                    | 비고   |
-| --------------- | ----------------------- | ------ |
-| vote_comment_id | 소비 평가 댓글 아이디   | 기본키 |
-| vote_post_id    | 소비 평가 게시글 아이디 | 외래키 |
-| user_id         | 유저 아이디             | 외래키 |
-| content         | 내용                    |        |
-| created_at      | 생성 일시               |        |
-| updated_at      | 수정 일시               |        |
+| 컬럼명         | 내용                    | 비고   |
+| -------------- | ----------------------- | ------ |
+| vote_commentId | 소비 평가 댓글 아이디   | 기본키 |
+| vote_post_id   | 소비 평가 게시글 아이디 | 외래키 |
+| user_id        | 유저 아이디             | 외래키 |
+| content        | 내용                    |        |
+| created_at     | 생성 일시               |        |
+| updated_at     | 수정 일시               |        |
 
 ### vote_likes 테이블
 
 | 컬럼명       | 내용                    | 비고   |
 | ------------ | ----------------------- | ------ |
-| vote_like_id | 소비 평가 좋아요 아이디 | 기본키 |
+| vote_likeId  | 소비 평가 좋아요 아이디 | 기본키 |
 | vote_post_id | 소비 평가 게시글 아이디 | 외래키 |
 | user_id      | 유저 아이디             | 외래키 |
-| is_like      | 따봉 여부(boolean)      |        |
+| is_upvote    | 👍👎 여부(boolean)      |        |
 | created_at   | 생성 일시               |        |
 
 ### quizzes 테이블
 
 | 컬럼명      | 내용                 | 비고   |
 | ----------- | -------------------- | ------ |
-| quiz_id     | 퀴즈 아이디          | 기본키 |
+| quizId      | 퀴즈 아이디          | 기본키 |
 | question    | 퀴즈 내용            |        |
 | explanation | 퀴즈 해설            |        |
 | is_correct  | 정답(boolean)        |        |
@@ -129,8 +130,8 @@
 
 | 컬럼명     | 내용               | 비고   |
 | ---------- | ------------------ | ------ |
-| answer_id  | 정답 아이디        | 기본키 |
+| answerId   | 정답 아이디        | 기본키 |
 | quiz_id    | 퀴즈 아이디        | 외래키 |
 | user_id    | 유저 아이디        |        |
-| is_answer  | 정답 여부(boolean) |        |
+| answer     | 유저가 제출한 정답 |        |
 | created_at | 생성 일시          |        |
